sna/gen5: Rework the flush after blend state changes

QA complained that the full flush to memory was too much of a
performance hit, so let's try a lighter weight non-stalling pipe flush
without.

References: https://bugs.freedesktop.org/show_bug.cgi?id=67157
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>